Add account stats
